# tracepath

./: .env.example  .gitignore  CLAUDE.md  README.md
.claude/agents/: infra-dev.md  python-dev.md  rust-dev.md
charts/tracepath/: Chart.yaml  README.md  values.yaml
charts/tracepath/templates/: configmap.yaml  gateway.yaml  services.yaml
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx
docker/: Dockerfile.dashboard  Dockerfile.gateway  Dockerfile.incident  Dockerfile.policies  docker-compose.yml  init.sql  nginx-dashboard.conf
docs/: aws-marketplace.md  devto-submission.md  infographic.html  interview-cheat-sheet.md  linkedin-post.md  onboarding.md  soc2-compliance.md  the-bridge-content.md  the-bridge-infographic.md
docs/screenshots/: README.md
gateway/: Cargo.toml
gateway/src/: main.rs
incident/: pyproject.toml
incident/incident_service/: detector.py  gemini_classifier.py  main.py  models.py  report_cli.py  reports.py
policies/: pyproject.toml
policies/policy_engine/: api.py  cli.py  replay.py  versioning.py
policies/rules/: allowlist.rego  budget.rego  main.rego  ratelimit.rego
sdk/java/src/main/java/com/tracepath/sdk/: AuditClient.java
sdk/python/: .gitignore  pyproject.toml
sdk/python/tests/: test_decorators.py  test_sdk.py  test_unit.py
sdk/python/tracepath_sdk/: __init__.py  decorators.py
sdk/typescript/: package.json
sdk/typescript/src/: index.ts
